# calculator

./: CMakeLists.txt  CMakeLists.txt.user.bb20aec  Items.qml  ItemsForm.ui.qml  Number0.qml  ShowText.cpp  ShowText.h  main.cpp  main.qml  qml.qrc
